# exploring-llm-inference-from-scratch

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  FAILURES.md  FURTHER_LISTENING.md  FURTHER_READING.md  LEARNING_PATH.md  LICENSE  README.md  ROADMAP.md  SPRINT.md  pyproject.toml
.github/workflows/: ci.yml
01_hardware_fundamentals/: 01_circuits_and_cores.md  02_memory_and_caches.md  03_gpu_model.md  04_gpu_architecture.md
02_cuda_software_stack/: 01_the_stack.md  02_end_to_end_inference.md  README.md
03_numerical_types/: 01_floating_point.md  README.md
04_measurement/: 01_benchmarking.md  02_first_run_effects.md  03_measuring_model_quality.md  README.md
05_attention_and_kv_cache/: 01_attention.md  02_mlp_feedforward.md  03_embedding_and_lm_head.md  04_elementwise_glue.md  05_sampling.md  06_moe.md  README.md
06_batching/: 01_batching.md  02_host_side.md  README.md
07_writing_and_tuning_kernels/: 01_writing_and_tuning_a_matmul.md  02_reading_a_real_kernel.md  03_kernel_languages_landscape.md  README.md
08_optimizing_inference/: 01_improving_decode.md  02_improving_prefill.md  03_scaling_past_one_gpu.md  README.md
09_kernel_engineering/: 01_cute_dsl_foundations.md  02_flashattention_rosetta_stone.md  03_source_to_sass.md  04_reading_and_optimizing_ptx.md  05_amd_kernel_track.md  06_how_i_practice.md  README.md
chapters/01_hardware_fundamentals/: 01_circuits_and_cores.md  04_gpu_architecture.md  README.md
chapters/06_batching/: README.md  (+2 more)
common/: __init__.py
reports/: 00_gpu.json
setup/: check_gpu.py
tests/: conftest.py  test_smoke.py
(+24 files in other folders)
