[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-inference"
version = "0.0.1"
description = "Labs and shared harness for a learn-LLM-inference-from-the-GPU-up journey (see ROADMAP.md)"
requires-python = ">=3.10"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.4"]

[tool.setuptools]
packages = ["common"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: needs a CUDA GPU; auto-skipped when torch or CUDA is unavailable",
]
